--- a/style.css
+++ b/style.css
@@ -17,13 +17,67 @@ a{
     text-decoration: none;
     color: inherit;
 }
+.titulo{
+    color: #b07dfb
+}
+.title-titulo{
+    font-size: 3.75rem;
+    line-height: 1;
+    font-weight: 700;
+}
+.span-titulo{
+    font-size: .875rem;
+    font-style: italic;
+}
+.main-paragraph{
+    font-size: 1.2rem;
+    line-height: 1.6;
+    letter-spacing: -0.005em;
+    color: rgba(0, 0, 0, 0.7);
+}
+.destaque{
+    color: #b07dfb;
+    font-size: .875rem;
+    max-width: 16rem;
+}
+.citacao, .atributos{
+    align-self: flex-start;
+    padding: 1.875rem;
+    border-radius: 5px;
+    background: linear-gradient(135deg, #8844ee, #b07dfb);
+}
+.citacao > p{
+    font-size: 1.5rem;
+    font-style: italic;
+    text-align: center;
+    color: white;
+    max-width: 500px;
+    margin: 0 auto;
+}
+.p2{
+    margin-top: 1.875rem;
+}
+.atributos > li{
+    color: white;
+    font-size: 1.125rem;
+    padding: 15px;
+    font-family: Courier, monospace;
+}
+.atributos > li:not(:first-child){
+    border-top: 2px solid #b07dfb;;
+}
+.p-footer{
+    text-align: center;
+    color: white;
+    padding: 1.875rem;
+}
 .estrutura{
     display: grid;
     grid-template-columns: auto 1fr;
     grid-row: 1fr auto;
     grid-template-areas: 
     "header header header"
-    "side-nav content anuncio"
+    "side-nav content anuncios"
     "footer footer footer";
 }
 header{
@@ -55,22 +109,29 @@ header > img{
 .side-nav{
     background-color: #fafbfc;
     grid-area: side-nav;
-    padding: 1.875;
-    max-width: 200px;
+}
+.ul-side-nav{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 1.875rem;
 }
 .ul-side-nav > li > a{
     padding: 1.25rem;
+    border-radius: 5px;
     background-color: #ffffff;
     display: block;
+    min-width: 60px;
+    max-width: 120px;
+    box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
 }
 .img-side-nav{
-    width: 100px;
+    width: 100%;
 }
 main{
     display: grid;
     grid-area: content;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
     gap: 1.875rem;
     padding: 1.875rem;
     max-width: 900px;
@@ -91,6 +152,8 @@ main{
     display: block;
     background: linear-gradient(135deg, #8844ee, #b07dfb);
     font-size: 3rem;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
 }
 .rotulo{
     background-color: #ffffff;
@@ -100,59 +163,41 @@ main{
     grid-column: 1/-1;
 }
 .wolf-1{
-    grid-row: 3/5;
+    grid-row: span 2;
+    align-self: end;
 }
-.wolf-2{
-    grid-column: 2;
-    grid-row: 4/5;
+[class^=wolf]{
+    align-self: flex-end;
 }
-.anuncios{
+.noticias{
     display: grid;
-    grid-area: anuncio;
-    gap: 1rem;
-    align-content: start;
+    grid-area: anuncios;
+    gap: 2rem;
+    padding: 1.875rem;
+    align-content: flex-start;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     background: #fafbfc;
+    width: 100%;
 }
 .anuncio-item{
-    width: 200px;
+    width: 240px;
 }
 footer{
     grid-area: footer;
     background: linear-gradient(135deg, #8844ee, #b07dfb);
 }
-footer > p{
-    text-align: center;
-    color: white;
-    padding: 1.875rem;
-}
-
-
-
-
-
-
-
-
-
-
-
-
 @media (max-width: 1200px){
     .estrutura{
-        display: grid;
-        grid-template-columns: auto 1fr;
-        grid-row: 1fr auto;
         grid-template-areas: 
         "header header header"
         "side-nav content content"
         "side-nav anuncios anuncios"
         "footer footer footer";
     }
+    .anuncio-item{
+        width: 100%;
+    }
 }
-
-
-
 @media (max-width: 760px){
     header{
         grid-template-columns: 1fr;
@@ -165,5 +210,25 @@ footer > p{
     .button-nav{
         background-color: rgb(133, 77, 217);
         font-size: inherit;
+    }
+    .estrutura{
+        grid-template-areas: 
+        "header header header"
+        "side-nav side-nav side-nav"
+        "content content content"
+        "anuncios anuncios anuncios"
+        "footer footer footer";
+    }
+    .ul-side-nav{
+        flex-direction: row;
+        overflow: auto;
+    }
+    .ul-side-nav > li > a{
+        width: 105px;
+    }
+}
+@media (max-width: 600px){
+    main{
+        grid-template-columns: auto;
     }
 }
